--- a/AdBlock/KeepStyle.conf
+++ b/AdBlock/KeepStyle.conf
@@ -6,11 +6,11 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2023-09-09
+// @UpdateTime        2024-02-27
 // @Function          应用净化去广告
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.5
+// @Version           V1.0.6
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/KeepStyle.conf
 // ==/UserScript==
 
@@ -18,27 +18,28 @@
 hostname=api.gotokeep.com, kad.gotokeep.com
 
 # > 屏蔽应用内弹窗
-^https?:\/\/api\.gotokeep\.com\/guide-webapp\/v\d\/popup\/getPopUp url reject
+^https?:\/\/api\.gotokeep\.com\/guide-webapp\/v\d\/popup\/getPopUp url reject-200
+^https?:\/\/api\.gotokeep\.com\/running\/v\d\/home\/dialog url reject-200
 # > 屏蔽部分启动弹窗
-^https?:\/\/api\.gotokeep\.com\/kprime\/v\d\/popups\/primeGuide url reject
+^https?:\/\/api\.gotokeep\.com\/kprime\/v\d\/popups\/primeGuide url reject-200
 # > 屏蔽开屏广告请求
-^https?:\/\/kad\.gotokeep\.com\/op-engine-webapp\/v\d\/ad url reject
+^https?:\/\/kad\.gotokeep\.com\/op-engine-webapp\/v\d\/ad url reject-200
 # > 屏蔽青少年弹窗
-^https?:\/\/api.gotokeep.com/cauchy/growth/init url reject
+^https?:\/\/api.gotokeep.com/cauchy/growth/init url reject-200
 # > 屏蔽搜索栏自动填充词
-^https?:\/\/api\.gotokeep\.com\/search\/v\d\/default\/keyword\/list url reject
+^https?:\/\/api\.gotokeep\.com\/search\/v\d\/default\/keyword\/list url reject-200
 # > 屏蔽热词
-^https?:\/\/api\.gotokeep\.com\/search\/v\d\/hotword\/list url reject
+^https?:\/\/api\.gotokeep\.com\/search\/v\d\/hotword\/list url reject-200
 # > 屏蔽hotCourse
-^https?:\/\/api\.gotokeep\.com\/search\/v\d\/hotCourse\/list url reject
+^https?:\/\/api\.gotokeep\.com\/search\/v\d\/hotCourse\/list url reject-200
 # > 屏蔽adwebapp
-^https?:\/\/api\.gotokeep\.com\/op-engine-webapp\/v\d\/ad url reject
+^https?:\/\/api\.gotokeep\.com\/op-engine-webapp\/v\d\/ad url reject-200
 # > 屏蔽广告预加载
-^https?:\/\/api\.gotokeep\.com\/ads\/v\d\/ads\/preload url reject
+^https?:\/\/api\.gotokeep\.com\/ads\/v\d\/ads\/preload url reject-200
 # > 屏蔽adbox
-^https?:\/\/api\.gotokeep\.com\/training\/box\/config url reject
+^https?:\/\/api\.gotokeep\.com\/training\/box\/config url reject-200
 # > 屏蔽更新
-^https?:\/\/api\.gotokeep\.com\/anno\/v\d\/upgrade\/check url reject
+^https?:\/\/api\.gotokeep\.com\/anno\/v\d\/upgrade\/check url reject-200
 # > 我的页面去推广
 ^https?:\/\/api\.gotokeep\.com\/athena\/v\d\/people\/my$ url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/keepStyle.js
 # > 应用底部栏净化
