--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -43,7 +43,7 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.03.13/v2.0.448 url reject-200
+^https?:\/\/2024.03.14/v2.0.449 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 58
@@ -200,7 +200,7 @@ https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/get(Ruled|Preload|PasMultiNot
 ^https?:\/\/dj\.palmestore\.com\/zybk\/api\/ad url reject-200
 ^https?:\/\/saad\.ms\.zhangyue\.net\/ad\/ url reject-200
 # > didachuxing
-^https?:\/\/capis.*didapinche\.com\/(ad|adbase)\/ url reject-200
+^https?:\/\/capis.*didapinche\.com\/ad\/cx\/startup url reject-200
 # > dongkakongjian*
 ^https?:\/\/ump\.sz\.creditcard\.ecitic\.com\/citiccard\/cm-ump\/ump-gateway\/ump-net-app\/ump-net-app\/adv url reject-200
 
