--- a/AdBlock/StartUp.conf
+++ b/AdBlock/StartUp.conf
@@ -43,14 +43,14 @@
 # ======= 0~9 ======= #
 
 # > version
-^https?:\/\/2024.03.15/v2.0.451 url reject-200
+^https?:\/\/2024.03.15/v2.0.452 url reject-200
 # > 10
 ^https?:\/\/ftapi\.10jqka\.com\.cn\/futgwapi\/api\/om\/v\d\/ad\/common\/transfer url reject-200
 # > 58
 ^https?:\/\/app\.58\.com\/api\/home\/(advertising|appadv) url reject-200
 # > 555
 ^https?:\/\/[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+){1,3}(:\d+)?\/api\/v\d\/movie\/index_recommend url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/555Ad.js
-^https?:\/\/[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+){1,3}(:\d+)?\/.*?\/v\d\/(version|notice\?|top_notice\?|advert\?position=[^2]+) url reject-200
+^https?:\/\/[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+){1,3}(:\d+)?\/.*?\/v\d\/(version$|notice\?|top_notice\?|advert\?position=[^2]+) url reject-200
 # > 12123
 ^https:\/\/gab\.122\.gov\.cn\/eapp\/m\/sysquery url reject-200
 # > 36kr
@@ -460,7 +460,7 @@ https?:\/\/helper\.2bulu\.com\/(greenPea\/queryTasks|proSpecial\/allData|saveSpl
 ^https?:\/\/api\.mcd\.cn\/bff\/portal\/(richpop|home\/splash) url reject-200
 # > merit
 ^https?:\/\/api\.merach\.com\/app\/AppAdvertisingController\/getAdvert url reject-200
-# > meisiyixue
+# > meisiyixue*
 ^https?:\/\/app-api\.medsci\.cn\/app-advertisement-space\/showAdList url reject-200
 
 
