--- a/AdBlock/KeepStyle.conf
+++ b/AdBlock/KeepStyle.conf
@@ -6,16 +6,16 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @Contribute        https://t.me/ddgksf2013_bot
 // @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2024-02-27
+// @UpdateTime        2024-03-23
 // @Function          应用净化去广告
 // @Suitable          自行观看“# > ”注释内容
 // @Attention         如需引用请注明出处，谢谢合作！
-// @Version           V1.0.6
+// @Version           V1.0.7
 // @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/KeepStyle.conf
 // ==/UserScript==
 
 
-hostname=api.gotokeep.com, kad.gotokeep.com
+hostname=hc-ssp.sm.cn, api.gotokeep.com, kad.gotokeep.com
 
 # > 屏蔽应用内弹窗
 ^https?:\/\/api\.gotokeep\.com\/guide-webapp\/v\d\/popup\/getPopUp url reject-200
@@ -23,6 +23,7 @@ hostname=api.gotokeep.com, kad.gotokeep.com
 # > 屏蔽部分启动弹窗
 ^https?:\/\/api\.gotokeep\.com\/kprime\/v\d\/popups\/primeGuide url reject-200
 # > 屏蔽开屏广告请求
+^https?:\/\/hc-ssp\.sm\.cn url reject-200
 ^https?:\/\/kad\.gotokeep\.com\/op-engine-webapp\/v\d\/ad url reject-200
 # > 屏蔽青少年弹窗
 ^https?:\/\/api.gotokeep.com/cauchy/growth/init url reject-200
